# gild

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGES  LICENSE  README.rst  codecov.yml  lint_requirements.txt  pyproject.toml  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: ci.yml  lint.yml
glaze/plugins/: __init__.py
glaze/plugins/errors/: __init__.py  errors.py  manifest.enaml  plugin.py  widgets.enaml
glaze/plugins/icons/: __init__.py  icon_theme.py  manifest.enaml  plugin.py
glaze/plugins/lifecycle/: __init__.py  app_window.enaml  extensions.py  lifecycle_manifest.enaml  manifest.enaml  plugin.py
glaze/plugins/log/: __init__.py  manifest.enaml  plugin.py  tools.py  widgets.enaml
glaze/plugins/preferences/: __init__.py  manifest.enaml  plugin.py  preferences.py
glaze/plugins/states/: __init__.py  manifest.enaml  plugin.py  state.py
glaze/testing/: fixtures.py
glaze/utils/: __init__.py  argparse.py  atom_util.py  container_change.py  declarator.py  enaml_destroy_hook.py  mapping_utils.py  plugin_tools.py  priority_heap.py
glaze/utils/widgets/: __init__.py  dict_tree_view.enaml  list_editor.enaml  qt_clipboard.py  qt_list_str_widget.py  qt_tree_menu.enaml  qt_tree_widget.py  tree_nodes.py
src/gild/: __init__.py
src/gild/plugins/: __init__.py
src/gild/plugins/errors/: __init__.py  errors.py  manifest.enaml  plugin.py  widgets.enaml
src/gild/plugins/icons/: __init__.py  icon_theme.py  manifest.enaml  plugin.py
src/gild/plugins/lifecycle/: __init__.py  app_window.enaml  extensions.py  manifest.enaml  plugin.py
src/gild/plugins/log/: __init__.py  manifest.enaml  plugin.py  tools.py  widgets.enaml
src/gild/plugins/preferences/: __init__.py  manifest.enaml  plugin.py  preferences.py
src/gild/plugins/states/: __init__.py  manifest.enaml  plugin.py  state.py
src/gild/testing/: __init__.py  broken_enaml.enaml  fixtures.py  util.py  windows.enaml
src/gild/utils/: __init__.py  argparse.py  atom_util.py  container_change.py  declarator.py  enaml_destroy_hook.py  mapping_utils.py  plugin_tools.py  priority_heap.py
src/gild/utils/widgets/: __init__.py  dict_tree_view.enaml  list_editor.enaml  qt_clipboard.py  qt_list_str_widget.py  qt_tree_menu.enaml  qt_tree_widget.py  tree_nodes.py
src/glaze/plugins/errors/: manifest.enaml  plugin.py  widgets.enaml
src/glaze/plugins/icons/: __init__.py  manifest.enaml  plugin.py
src/glaze/plugins/lifecycle/: __init__.py  app_window.enaml  extensions.py
src/glaze/plugins/log/: __init__.py  manifest.enaml  plugin.py  tools.py  widgets.enaml
src/glaze/plugins/preferences/: __init__.py  manifest.enaml  preferences.py
src/glaze/plugins/states/: __init__.py  manifest.enaml  state.py
src/glaze/testing/: __init__.py  broken_enaml.enaml  util.py  windows.enaml
src/glaze/utils/: __init__.py  atom_util.py  container_change.py  declarator.py  enaml_destroy_hook.py  plugin_tools.py
tests/: app_helpers.enaml  conftest.py  test_main_window.py
tests/plugins/errors/: test_plugin.py
tests/plugins/icons/: conftest.py  contributions.enaml  test_icon_theme.py  test_plugin.py
tests/plugins/lifecycle/: test_lifecycle_plugin.py
tests/plugins/log/: test_plugin.py  test_tools.py
tests/plugins/preferences/: pref_utils.enaml  test_prefs.py
tests/plugins/states/: states_utils.enaml  test_states.py
tests/utils/: plugin_tools_testing.enaml  test_atom_util.py  test_container_change.py  test_declarator.py  test_enaml_destroy_hook.py  test_mapping_utils.py  test_plugin_tools.py  test_priority_heap.py
tests/utils/widgets/: test_dict_tree_view.enaml  test_list_str_widget.enaml  test_tree_widget.enaml  test_widgets.py
(+4 files in other folders)
