[project]
name = "gild"
description = "App building plugins for Enaml based plugin applications"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "enaml>=0.15.2",
    "qtawesome",
    "watchdog",
    "rtoml",
    "typing_extensions; python_version<'3.10'"
]
dynamic=["version"]

[project.optional-dependencies]
qt5-pyqt = ["enaml[qt5-pyqt]"]
qt5-pyside = ["enaml[qt5-pyside]"]
qt6-pyqt = ["enaml[qt6-pyqt]"]
qt6-pyside = ["enaml[qt6-pyside]"]

[project.urls]
homepage = "https://github.com/MatthieuDartiailh/gild"
documentation = "https://gild.readthedocs.io/en/latest/"
repository = "https://github.com/MatthieuDartiailh/gild"
changelog = "https://github.com/MatthieuDartiailh/gild/blob/main/doc/changelog.rst"

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 88  # Enforce the default value

[tool.pytest.ini_options]
minversion = "6.0"

[tool.mypy]
follow_imports = "normal"
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "pytest.*",

]
ignore_missing_imports = true

[tool.isort]
profile = "black"
combine_as_imports = true