# FIXME add description, metadat etc in time
[metadata]
name = glaze
author = Matthieu C. Dartiailh
author_email = m.dartiailh@gmail.com
license = BSD License
url = https://github.com/Exopy/glaze
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
platforms = Linux; Windows; Mac

[options]
packages = find:
zip_safe = False
python_requires = >= 3.6
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
install_requires =
    atom>=0.6.0
    enaml>=0.12.0
    kiwisolver>=1.0.0
    qtawesome
    watchdog
    setuptools
    typing_extensions
use_2to3 = False

[options.extras_require]
pyqt = pyqt5
pyside = pyside2

[options.packages.find]
exclude = tests, tests.*

[options.package_data]
* =
    *.enaml

[bdist_wheel]
universal=1

[flake8]
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
ignore = E203, E266, E501, W503, E731
# line length is intentionally set to 80 here because glaze uses Bugbear
# See https://github.com/psf/black/blob/master/README.md#line-length for more details
max-line-length = 80
max-complexity = 20
select = B,C,E,F,W,T4,B9
per-file-ignores =
    pyvisa/__init__.py:E402
    pyvisa/constants.py:E221

[mypy]
follow_imports = ignore
strict_optional = True

# XXX Ideally remove once pytest ships typing information
[mypy-pytest.*]
ignore_missing_imports = True

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = atom,enaml,setuptools,typing_extensions, pytest
